# gem

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  .prettierrc.json  .rustfmt.toml  .travis.yml  AGENTS.md  CNAME  Cargo.toml  README.md  README_zh.md  biome.json  biome.jsonc  cspell.json  gem-book.cli.json  karma.bs.config.js  karma.conf.js  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  umd.webpack.config.js  webpack.config.build.js  webpack.config.js  webpack.config.umd.js
.cursor/rules/: gem-rule.mdc  typescript-rule.mdc
.github/workflows/: context-server-publish.yml  duoyun-ui-publish.yml  gem-analyzer-publish.yml  gem-analyzer.yml  gem-book-publish.yml  gem-devtools-publish.yml  gem-port-publish.yml  gem-publish.yml  gem-ssr-publish.yml  language-service-publish.yml  lint.yml  publish.yml  release.yml  swc-plugin-gem-publish.yml  tap-ui-publish.yml  ts-gem-plugin-publish.yml  unplugin-gem-publish.yml  vscode-extension-publish.yml  zed-plugin-gem-publish.yml
.zed/: settings.json
art/: gem.ai
crates/swc-gem-plugin/: Cargo.toml  package.json
crates/swc-gem-plugin/src/: lib.rs
crates/swc-plugin-gem/: .gitignore  Cargo.toml  README.md  package.json  types.d.ts
crates/swc-plugin-gem/src/: auto-import.json  lib.rs
crates/swc-plugin-gem/src/visitors/: hmr.rs  import.rs  memo.rs  minify.rs  mod.rs  path.rs  preload.rs  selector.rs
crates/swc-plugin-gem/tests/: fixture.rs
crates/swc-plugin-gem/tests/fixture/auto-import/elements/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/auto-import/members/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/hmr/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/hmr/nested-return/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/hmr/skip-reload/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/memo/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/minify/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/path/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/preload/: input.ts  output.ts
crates/swc-plugin-gem/tests/fixture/selector/: input.ts  output.ts
crates/zed-plugin-gem/: .gitignore  Cargo.toml  README.md  build.rs  extension.toml
crates/zed-plugin-gem/languages/typescript/: injections.scm
crates/zed-plugin-gem/snippets/: typescript.json
crates/zed-plugin-gem/src/: injections.scm  lib.rs
docs/: .gitignore  README.md  book.json  index.html  template.html
docs/001-guide/: 002-reactive-element.md  003-global-state-management.md  004-route.md  005-icon.md  006-styled-element.md  007-vs-other.md  007-vs-react-vue.md  008-ide-support.md  009-testing.md  010-faq.md
docs/002-API/: 002-gem-element.md  003-store.md  004-history.md  005-internal-element.md  006-helper.md  007-decorator.md  008-utils.md  009-reexport.md
docs/API/: 002-gem-element.md  004-history.md  005-internal-element.md  006-helper.md  README.md
docs/en/: 011-faq.md  README.md
docs/en/001-guide/: 001-reactive-element.md  003-global-state-management.md  004-route.md  005-icon.md  006-styled-element.md  007-vs-other.md  010-debug.md  010-faq.md  011-faq.md  README.md
docs/en/002-API/: 003-store.md  004-history.md  005-built-in-element.md  006-helper.md  007-decorator.md  008-utils.md  009-re-export.md  README.md
docs/en/002-advance/: 002-effect.md  003-theme.md  005-i18n.md  007-vs-other.md
docs/en/003-api/: 001-gem-element.md  005-built-in-element.md  007-decorator.md  008-utils.md  README.md
docs/en/004-blog/: 001-create-standard-element.md  002-create-controlled-element.md  004-add-gesture.md  004-gem-evolution.md  005-improve-route.md
docs/guide/: 002-custom-element.md  002-reactive-element.md  003-global-state-management.md  004-route.md  005-icon.md  006-styled-element.md  006-vs-react-vue.md  007-vs-react-vue.md  008-faq.md  008-ide-support.md  README.md
docs/zh/: 011-faq.md  README.md
docs/zh/001-guide/: 003-global-state-management.md  004-route.md  005-icon.md  006-styled-element.md  007-vs-other.md  010-debug.md  011-faq.md  README.md  config.yml
docs/zh/002-API/: 004-history.md  005-built-in-element.md  006-helper.md  008-utils.md  009-re-export.md  (+1 more)
examples/hello-world/: index.ts
examples/multi-page/: api.ts  index.ts  page-a.ts  page-b.ts  store.ts
linter/: assign.grit  no_this_effect.grit
patches/: @web__dev-server-esbuild@1.0.4.patch
scripts/: build-examples.js  release.js
src/: index.ts  umd.ts  version.ts
src/components/: link.ts  route.ts  title.ts
src/elements/: dialog-base.ts  gesture.ts  link.ts  modal-base.ts  reflect.ts  route.ts  theme.ts  title.ts  unsafe.ts  use-react.ts  use.ts
src/helper/: i18n.ts  mediaquery.ts  request.ts  theme.ts
src/lib/: component.ts  decorators.ts  element.ts  history.ts  store.ts  utils.ts  version.ts
src/test/: gem-demo.test.ts  gem-element.test.ts  history.test.ts  multi-element.test.ts  store.test.ts  utils.test.ts
(+69 files in other folders)
