[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.package]
authors = ["mantou <594mantou@gmail.com>"]
rust-version = "1.70"
edition = "2021"
homepage = "https://github.com/mantou132/gem"
license = "Apache-2.0"
repository = "https://github.com/mantou132/gem.git"

[workspace.dependencies]
node-resolve = "2.2.0"
indexmap = { version = "2.6.0" }
regex = { version = "1.10.4", default-features = false }
serde = "1.0.203"
serde_json = "1.0.117"
swc_core = "5.0.0"
swc_ecma_parser = "5.0.0"
swc_ecma_visit = "4.0.0"
swc_ecma_ast = "4.0.0"
swc_common = "4.0.0"
testing = "0.42.0"
once_cell = "1.19.0"
tracing = "0.1.40"
pathdiff = "0.2.3"
typed-path = { version = "0.9.3", default-features = false }
