[package]
name = "swc-gem-plugin"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { workspace = true }
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

[dev-dependencies]
swc_ecma_parser = { workspace = true }
