[package]
name = "swc_plugin_gem"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
node-resolve = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }
swc_ecma_visit = { workspace = true }
swc_common = { workspace = true, features = ["concurrent"] }
swc_ecma_ast = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
pathdiff = { workspace = true }
typed-path = { workspace = true }

[dev-dependencies]
swc_ecma_parser = { workspace = true }
testing = { workspace = true }
