[package]
name = "gem"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2.0"

[build-dependencies]
anyhow = "1"
tempfile = "3"
fs-more = "0.8.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
flate2 = "1.0.35"
tar = "0.4.43"
tracing = { workspace = true }
