[package]
name = "gem"
version = "0.0.2"
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = { git = "https://github.com/zed-industries/zed", branch = "v0.181.x" }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
anyhow = "1.0.97"
tempfile = "3.18.0"
fs-more = "0.8.0"
reqwest = { version = "0.12.13", features = ["blocking"] }
flate2 = "1.1.0"
tar = "0.4.44"
tracing = { workspace = true }
